--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -53,8 +53,8 @@
 				</li>
 
 				<li class="sidebar-item">
-					<a class="sidebar-link" href="blank">
-						<i class="align-middle" data-feather="book"></i> <span class="align-middle">Празна страница</span>
+					<a class="sidebar-link" href="/show">
+						<i class="align-middle" data-feather="book"></i> <span class="align-middle">Кашони</span>
 					</a>
 				</li>
 			</ul>
