--- a/src/main/resources/templates/pages-blank.html
+++ b/src/main/resources/templates/pages-blank.html
@@ -51,9 +51,9 @@
 					</a>
 				</li>
 
-				<li class="sidebar-item active">
-					<a class="sidebar-link" href="blank">
-						<i class="align-middle" data-feather="book"></i> <span class="align-middle">Празна страница</span>
+				<li class="sidebar-item">
+					<a class="sidebar-link" href="/show">
+						<i class="align-middle" data-feather="book"></i> <span class="align-middle">Кашони</span>
 					</a>
 				</li>
 
