--- a/src/main/resources/templates/Carton/show.html
+++ b/src/main/resources/templates/Carton/show.html
@@ -21,17 +21,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <style>
-      .custom-card-width-lg {
-        width: auto; /* Променете стойността на ширината, според вашите нужди */
-        margin: 0 auto; /* Опционално: Центриране на карта хоризонтално */
+.custom-card-width-lg {
+width: auto; /* Променете стойността на ширината, според вашите нужди */
+margin: 0 auto; /* Опционално: Центриране на карта хоризонтално */
     }
 
+.yellow-cell {
+  background-color: yellow;
+}
 
-
+.red-cell {
+  background-color: red;
+}
 
 
 </style>
-
 <body>
 <div class="wrapper">
     <nav id="sidebar" class="sidebar js-sidebar">
@@ -108,15 +112,19 @@
                                         <td th:text="${carton.id}"></td>
                                         <td th:text="${carton.name}"></td>
                                         <td th:text="${carton.size + ' См'}"></td>
-                                        <td th:text="${carton.availableQuantity + ' Броя'}"></td>
+                                        <td>
+                                            <span th:text="${carton.availableQuantity + ' Броя'}" th:class="${carton.availableQuantity <= 20 ? 'red-cell' : (carton.availableQuantity <= 100 ? 'yellow-cell' : '')}"></span>
+                                        </td>
                                         <td th:text="${carton.price + ' Лв'}"></td>
                                         <td>
-                                            <form th:action="@{'/delete/' + ${carton.id}}" method="post" th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете кашон с име: ' + ${carton.name} + '?\');'">
+                                            <form th:action="@{'/delete/' + ${carton.id}}" method="post"
+                                                  th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да изтриете кашон с име: ' + ${carton.name} + '?\');'">
                                                 <button type="submit" class="btn btn-danger">Изтрий</button>
                                             </form>
                                         </td>
                                         <td>
-                                            <form th:action="@{'/editCarton/' + ${carton.id}}" method="get" th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да редактирате кашон с име: ' + ${carton.name} + '?\');'">
+                                            <form th:action="@{'/editCarton/' + ${carton.id}}" method="get"
+                                                  th:attr="onsubmit='return confirm(\'Сигурни ли сте, че искате да редактирате кашон с име: ' + ${carton.name} + '?\');'">
                                                 <button type="submit" class="btn btn-primary">Редактирай</button>
                                             </form>
                                         </td>
