--- a/src/main/resources/templates/Carton/edit.html
+++ b/src/main/resources/templates/Carton/edit.html
@@ -79,7 +79,7 @@
 <div class="wrapper">
     <nav id="sidebar" class="sidebar js-sidebar">
         <div class="sidebar-content js-simplebar">
-            <a class="sidebar-brand" href="../index.html">
+            <a class="sidebar-brand" href="index">
                 <span class="align-middle">Lukeria</span>
             </a>
 
