--- a/src/main/resources/templates/Carton/show.html
+++ b/src/main/resources/templates/Carton/show.html
@@ -40,7 +40,7 @@ margin: 0 auto; /* Опционално: Центриране на карта х
 <div class="wrapper">
     <nav id="sidebar" class="sidebar js-sidebar">
         <div class="sidebar-content js-simplebar">
-            <a class="sidebar-brand" href="../index.html">
+            <a class="sidebar-brand" href="index">
                 <span class="align-middle">Lukeria</span>
             </a>
 
@@ -146,10 +146,4 @@ margin: 0 auto; /* Опционално: Центриране на карта х
 
 </html>
 <script>
-	.custom-card-width {
-  width: 80%;
-  margin: 0 auto; /* Optional: Centers the card horizontally */
-}
-
-
 </script>
