--- a/src/main/resources/templates/Plate/edit.html
+++ b/src/main/resources/templates/Plate/edit.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,9 +14,10 @@
 
     <link rel="canonical" href="https://demo-basic.adminkit.io/"/>
 
-    <title> Кашони </title>
+    <title> Тарелки </title>
 
-    <link href="css/app.css" rel="stylesheet">
+    <link href="/css/app.css" rel="stylesheet">
+    <link href="/js/app.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <style>
@@ -73,13 +73,13 @@
     .form-group button:hover {
         background-color: #3e64e2;
     }
-
 </style>
 
 <body>
 <div class="wrapper">
-<!--    HEADER  -->
-<th:block th:include="~{fragments/header}"></th:block>
+    <!--    HEADER  -->
+    <th:block th:include="~{fragments/header}"></th:block>
+
     <div class="main">
         <nav class="navbar navbar-expand navbar-light navbar-bg">
             <a class="sidebar-toggle js-sidebar-toggle">
@@ -90,36 +90,29 @@
             <div class="form-container">
                 <div class="card custom-card-width-lg">
                     <div class="card-header">
-                        <h5 class="card-title mb-0">Създай кашон</h5>
+                        <h5 class="card-title mb-0">Редактирай тарелка</h5>
                     </div>
                     <div class="card-body">
-                        <form action="/submit" method="post">
+                        <form th:action="@{'/plate/edit/' + ${plate.id}}" method="get" th:object="${plate}">
                             <div class="form-group">
                                 <label for="name">Име:</label>
                                 <input type="text" id="name" name="name" pattern=".{10,}"
                                        title="Моля въведете името на кашона с поне 10 символа!" required
-                                       th:value="${carton.name}"/>
-                                <div class="error-message"></div>
-                            </div>
-                            <div class="form-group">
-                                <label for="size">Размери:</label>
-                                <input type="text" id="size" name="size" pattern=".{10,}"
-                                       title="Моля въведете размерите на кашона с поне 10 символа!" required
-                                       th:value="${carton.size}"/>
+                                       th:field="*{name}"/>
                                 <div class="error-message"></div>
                             </div>
                             <div class="form-group">
                                 <label for="availableQuantity">Налични бройки:</label>
                                 <input type="number" id="availableQuantity" name="availableQuantity" min="1" required
-                                       th:value="${carton.availableQuantity}"/>
+                                       th:field="*{availableQuantity}"/>
                             </div>
                             <div class="form-group">
                                 <label for="price">Цена:</label>
                                 <input type="number" id="price" name="price" step="0.01" min="0.01" required
-                                       th:value="${carton.price}"/>
+                                       th:field="*{price}"/>
                             </div>
                             <div class="text-center">
-                                <button type="submit" class="btn btn-primary">Създай</button>
+                                <button type="submit" class="btn btn-primary">Редактирай</button>
                             </div>
                         </form>
                     </div>
@@ -128,6 +121,6 @@
         </main>
     </div>
 </div>
-<script src="js/app.js"></script>
 </body>
+<script src="/js/app.js"></script>
 </html>
