--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="">
 
 <head>
     <meta charset="utf-8">
@@ -19,51 +19,19 @@
 
     <link href="css/app.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+
+    <style>
+        .custom-card-width {
+            width: 80%;
+            margin: 0 auto; /* Optional: Centers the card horizontally */
+        }
+    </style>
 </head>
 
 <body>
 <div class="wrapper">
-    <nav id="sidebar" class="sidebar js-sidebar">
-        <div class="sidebar-content js-simplebar">
-            <a class="sidebar-brand" href="index">
-                <span class="align-middle">Lukeria</span>
-            </a>
-
-            <ul class="sidebar-nav">
-                <li class="sidebar-header">
-                    Страници
-                </li>
-
-                <li class="sidebar-item active">
-                    <a class="sidebar-link" href="index">
-                        <i class="align-middle" data-feather="sliders"></i> <span
-                            class="align-middle">Главна страница</span>
-                    </a>
-                </li>
-
-                <li class="sidebar-item">
-                    <a class="sidebar-link" href="login">
-                        <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Впиши се</span>
-                    </a>
-                </li>
-
-                <li class="sidebar-item">
-                    <a class="sidebar-link" href="register">
-                        <i class="align-middle" data-feather="user-plus"></i> <span
-                            class="align-middle">Регистрирай се</span>
-                    </a>
-                </li>
-
-                <li class="sidebar-item">
-                    <a class="sidebar-link" href="/show">
-                        <i class="align-middle" data-feather="book"></i> <span class="align-middle">Кашони</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-
+    <!--    HEADER  -->
+    <th:block th:include="~{fragments/header}"></th:block>
     <div class="main">
         <nav class="navbar navbar-expand navbar-light navbar-bg">
             <a class="sidebar-toggle js-sidebar-toggle">
@@ -120,7 +88,6 @@
 </div>
 <script src="js/app.js"></script>
 
-
 </body>
 
 </html>
@@ -129,6 +96,4 @@
   width: 80%;
   margin: 0 auto; /* Optional: Centers the card horizontally */
 }
-
-
 </script>
