add fragment in frontend CRUD Package

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,10 +24,14 @@
                         class="align-middle">Регистрирай се</span>
                 </a>
             </li>
-
             <li class="sidebar-item">
                 <a id="nav-show" class="sidebar-link" href="/show">
                     <i class="align-middle" data-feather="book"></i> <span class="align-middle">Кашони</span>
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a id="nav-package-show" class="sidebar-link" href="/package/show">
+                    <i class="align-middle" data-feather="book"></i> <span class="align-middle">Кутия</span>
                 </a>
             </li>
         </ul>
