--- a/src/main/resources/templates/Plate/show.html
+++ b/src/main/resources/templates/Plate/show.html
@@ -18,22 +18,9 @@
   <title> Тарелки </title>
 
   <link href="/css/app.css" rel="stylesheet">
+  <link href="/css/show.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
-<style>
-.custom-card-width-lg {
-width: auto; /* Променете стойността на ширината, според вашите нужди */
-margin: 0 auto; /* Опционално: Центриране на карта хоризонтално */
-    }
-
-.yellow-cell {
-  background-color: yellow;
-}
-
-.red-cell {
-  background-color: red;
-}
-</style>
 <body>
 <div class="wrapper">
   <!--    HEADER  -->
