--- a/src/main/resources/templates/pages-blank.html
+++ b/src/main/resources/templates/pages-blank.html
@@ -38,10 +38,10 @@
 </body>
 
 </html>
-<script>
+<style>
 	.custom-card-width {
   width: 80%;
   margin: 0 auto; /* Optional: Centers the card horizontally */
 }
 
-</script>
+</style>
