--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,19 +6,19 @@
 
         <ul class="sidebar-nav">
             <li class="sidebar-item">
-                <a id="nav-index" class="sidebar-link" href="index">
+                <a id="nav-index" class="sidebar-link" href="/index">
                     <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Главна страница</span>
                 </a>
             </li>
 
             <li class="sidebar-item">
-                <a id="nav-login" class="sidebar-link" href="login">
+                <a id="nav-login" class="sidebar-link" href="/login">
                     <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Впиши се</span>
                 </a>
             </li>
 
             <li class="sidebar-item">
-                <a id="nav-register" class="sidebar-link" href="register">
+                <a id="nav-register" class="sidebar-link" href="/register">
                     <i class="align-middle" data-feather="user-plus"></i> <span class="align-middle">Регистрирай се</span>
                 </a>
             </li>
