--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -87,13 +87,12 @@
     </div>
 </div>
 <script src="js/app.js"></script>
-
 </body>
 
 </html>
-<script>
+<style>
 	.custom-card-width {
   width: 80%;
   margin: 0 auto; /* Optional: Centers the card horizontally */
 }
-</script>
+</style>
