--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -77,10 +77,9 @@
 </body>
 
 </html>
-<script>
+<style>
 	.custom-card-width {
   width: 80%;
   margin: 0 auto; /* Optional: Centers the card horizontally */
 }
-
-</script>
+</style>
