--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -81,13 +81,12 @@
 </body>
 
 </html>
-<script>
+<style>
 	.custom-card-width {
   width: 80%;
   margin: 0 auto; /* Optional: Centers the card horizontally */
 }
-
-</script>
+</style>
 
 
 
