--- a/src/main/resources/templates/Package/show.html
+++ b/src/main/resources/templates/Package/show.html
@@ -39,7 +39,8 @@ margin: 0 auto; /* Опционално: Центриране на карта х
 <body>
 <div class="wrapper">
     <!--    HEADER  -->
-    <th:block th:include="~{fragments/header}"></th:block>
+    <th:block th:insert="~{fragments/header}"></th:block>
+
 
 
     <div class="main">
