add html pages for crud client

--- a/src/main/resources/templates/fragments/links.html
+++ b/src/main/resources/templates/fragments/links.html
@@ -10,5 +10,5 @@
 <link rel="shortcut icon" href="/static/img/icons/icon-48x48.png"/>
 <link rel="canonical" href="https://demo-basic.adminkit.io/"/>
 
-<link href="css/app.css" rel="stylesheet">
+<link href="/css/app.css" rel="stylesheet">
 <link href="/js/app.css" rel="stylesheet">
