--- a/src/main/resources/templates/Client/edit.html
+++ b/src/main/resources/templates/Client/edit.html
@@ -41,27 +41,34 @@
                                        th:field="*{idNumEIK}"/>
                                 <div class="error-message"></div>
                             </div>
-                            <div class="form-group">
-                                <div class="form-check">
-                                    <input type="radio" name="hasIdNumDDS"  th:value= true > Има Ид. Номер по ДДС<br>
-                                </div>
-                                <div class="form-check">
-                                    <input type="radio" name="hasIdNumDDS" th:value="false"> Няма Ид. номер по ДДС<br>
-                                </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio"  th:field="*{hasIdNumDDS}" name="hasIdNumDDS" th:value= true id="hasIdNumDDS">
+                                <label class="form-check-label" for="hasIdNumDDS">
+                                    Има Ид. Номер по ДДС
+                                </label>
                             </div>
-
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" th:field="*{hasIdNumDDS}" name="hasIdNumDDS"  th:value=false id="hasIdNumDDS2">
+                                <label class="form-check-label" for="hasIdNumDDS2">
+                                    Няма Ид. номер по ДДС
+                                </label>
+                            </div>
                             <div class="form-group">
                                 <label for="address">Адрес:</label>
                                 <input type="text" id="address" name="address" required
                                        th:field="*{address}"/>
                             </div>
-                            <div class="form-group">
-                                <div class="form-check">
-                                    <input type="radio" name="isBulgarianClient" value=true> Клиента е от България<br>
-                                </div>
-                                <div class="form-check">
-                                    <input type="radio" name="isBulgarianClient" value=false> Клиента НЕ е от България<br>
-                                </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" th:field="*{isBulgarianClient}" name="isBulgarianClient" value=true id="isBulgarianClient">
+                                <label class="form-check-label" for="isBulgarianClient">
+                                    Клиента е от България
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" th:field="*{isBulgarianClient}" name="isBulgarianClient"  value=false id="isBulgarianClient2">
+                                <label class="form-check-label" for="isBulgarianClient2">
+                                    Клиента НЕ е от България
+                                </label>
                             </div>
                             <div class="form-group">
                                 <label for="mol">МОЛ:</label>
