--- a/src/main/resources/templates/Client/show.html
+++ b/src/main/resources/templates/Client/show.html
@@ -11,6 +11,8 @@
 <div class="wrapper">
   <!--    HEADER  -->
   <th:block th:include="~{fragments/header}"></th:block>
+
+
   <div class="main">
     <nav class="navbar navbar-expand navbar-light navbar-bg">
       <a class="sidebar-toggle js-sidebar-toggle">
@@ -46,9 +48,9 @@
                     <td th:text="${client.id}"></td>
                     <td th:text="${client.businessName}"></td>
                     <td th:text="${client.idNumEIK}"></td>
-                    <td th:text="${client.hasIdNumDDS}"></td>
+                    <td th:text="${client.hasIdNumDDS ? 'BG' + client.idNumEIK : 'няма'}"></td>
                     <td th:text="${client.address}"></td>
-                    <td th:text="${client.isBulgarianClient}"></td>
+                    <td th:text="${client.isBulgarianClient ? 'ДА' : 'НЕ'}"></td>
                     <td th:text="${client.mol}"></td>
                     <td>
                       <form th:action="@{'/client/delete/' + ${client.id}}" method="post"
@@ -73,6 +75,6 @@
     </main>
   </div>
 </div>
-<script src="js/app.js"></script>
+<script src="/js/app.js"></script>
 </body>
 </html>
