--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -44,6 +44,11 @@
                     <i class="align-middle" data-feather="credit-card"></i> <span class="align-middle">Клиенти</span>
                 </a>
             </li>
+            <li class="sidebar-item">
+                <a id="nav-show3" class="sidebar-link" href="/product/show">
+                    <i class="align-middle" data-feather="credit-card"></i> <span class="align-middle">Продукти Лукерия</span>
+                </a>
+            </li>
         </ul>
     </div>
 </nav>
