--- a/src/main/resources/templates/OrderProduct/addProduct.html
+++ b/src/main/resources/templates/OrderProduct/addProduct.html
@@ -28,7 +28,7 @@
                     <div class="card-body">
                         <form action="/orderProduct/submit" method="post">
                             <div class="form-group">
-                                <p>Order ID: <span th:text="${order.id}"></span></p>
+                                <p>Номер на поръчка: <span th:text="${order.id}"></span></p>
                             </div>
                             <div class="form-group">
                                 <label for="packageId" style="width: 100%;">Продукти:</label>
