--- a/src/main/resources/templates/OrderProduct/create.html
+++ b/src/main/resources/templates/OrderProduct/create.html
@@ -7,6 +7,7 @@
 
     <title> Добави поръчка </title>
     <link href="/css/form.css" rel="stylesheet">
+    <link href="/css/datepicker.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,13 +30,15 @@
                         <form action="/order/submit" method="post">
                             <div class="form-group">
                                 <label for="clientId" style="width: 100%;">Клинети:</label>
-                                <select class="form-select" size="6" aria-label="size 6 select example" id="clientId" name="clientId" style="width: 100%;">
+                                <select class="form-select" size="6" aria-label="size 6 select example" id="clientId" name="clientId" style="width: 100%;" required>
                                     <option th:each="client : ${clients}" th:value="${client.id}" th:text="${client.businessName}"></option>
                                 </select>
                             </div>
                             <div class="form-group">
+                                <center>
                             <label for="orderDate">Дата на поръчка:</label>
-                            <input type="date" id="orderDate"  th:field="${order.orderDate}" name="dateInput">
+                            <input type="date" name="orderDate" id="orderDate"  th:field="${order.orderDate}" required>
+                                </center>
                             </div>
                             <div class="text-center">
                                 <button type="submit" class="btn btn-primary">Създай</button>
