adapt some fr mothods to work with the backend

--- a/src/main/resources/templates/OrderProduct/addProduct.html
+++ b/src/main/resources/templates/OrderProduct/addProduct.html
@@ -47,7 +47,7 @@
                                 <label class="check-box" for="addAnotherDish">
                                 </label></div>
                             <div class="text-center">
-                                <button type="submit" class="btn btn-primary">Създай</button>
+                                <button type="submit" class="btn btn-primary">Запази</button>
                             </div>
                         </form>
                     </div>
