--- a/src/main/resources/templates/OrderProduct/create.html
+++ b/src/main/resources/templates/OrderProduct/create.html
@@ -41,7 +41,7 @@
                                 </center>
                             </div>
                             <div class="text-center">
-                                <button type="submit" class="btn btn-primary">Създай</button>
+                                <button type="submit" class="btn btn-primary">Запази и добави продукти</button>
                             </div>
                         </form>
                     </div>
