create orderDetails.html and show.html for displaying all orders with a functionality to delete an order

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -45,8 +45,8 @@
                 </a>
             </li>
             <li class="sidebar-item">
-                <a id="nav-show3" class="sidebar-link" href="/order/create">
-                    <i class="align-middle" data-feather="credit-card"></i> <span class="align-middle">Добави поръчка</span>
+                <a id="nav-show3" class="sidebar-link" href="/order/show">
+                    <i class="align-middle" data-feather="shopping-bag"></i> <span class="align-middle">Всички поръчки</span>
                 </a>
             </li>
         </ul>
