--- a/src/main/resources/templates/OrderProduct/addProduct.html
+++ b/src/main/resources/templates/OrderProduct/addProduct.html
@@ -39,7 +39,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="number" style="width: 100%;">Брой:</label>
-                                <input type="number" id="number"  th:field="${orderProduct.number}" name="number" required>
+                                <input type="number" id="number"  th:field="${orderProduct.number}" name="number" required min="1">
                             </div>
                             <div class="checkbox-wrapper-19">
                                 <label>Добави още продукти към поръчката: </label>
@@ -57,12 +57,14 @@
                             <tr>
                                 <th>Номер</th>
                                 <th>Име</th>
+                                <th>Брой</th><!-- Replace with the actual name of the third column -->
                             </tr>
                             </thead>
                             <tbody>
-                            <tr th:each="product : ${products}">
+                            <tr th:each="product, iter : ${products}">
                                 <td th:text="${product.id}"></td>
                                 <td th:text="${product.name}"></td>
+                                <td th:text="${orderProducts[iter.index]?.number}"></td>
                             </tr>
                             </tbody>
                         </table>
@@ -72,5 +74,5 @@
         </main>
     </div>
 </div>
-<script src="js/app.js"></script>
+<script src="/js/app.js"></script>
 </body>
