--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,20 +6,20 @@
 
         <ul class="sidebar-nav">
             <li class="sidebar-item">
-                <a id="nav-index" class="sidebar-link" href="index">
+                <a id="nav-index" class="sidebar-link" href="/index">
                     <i class="align-middle" data-feather="sliders"></i> <span
                         class="align-middle">Главна страница</span>
                 </a>
             </li>
 
             <li class="sidebar-item">
-                <a id="nav-login" class="sidebar-link" href="login">
+                <a id="nav-login" class="sidebar-link" href="/login">
                     <i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Впиши се</span>
                 </a>
             </li>
 
             <li class="sidebar-item">
-                <a id="nav-register" class="sidebar-link" href="register">
+                <a id="nav-register" class="sidebar-link" href="/register">
                     <i class="align-middle" data-feather="user-plus"></i> <span
                         class="align-middle">Регистрирай се</span>
                 </a>
@@ -46,7 +46,12 @@
             </li>
             <li class="sidebar-item">
                 <a id="nav-show3" class="sidebar-link" href="/order/show">
-                    <i class="align-middle" data-feather="shopping-bag"></i> <span class="align-middle">Всички поръчки</span>
+                    <i class="align-middle" data-feather="shopping-bag"></i> <span class="align-middle">Поръчки на продукти</span>
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a id="nav-show4" class="sidebar-link" href="/material-order/show">
+                    <i class="align-middle" data-feather="shopping-bag"></i> <span class="align-middle">Поръчки на материали</span>
                 </a>
             </li>
         </ul>
