--- a/src/main/resources/templates/Carton/show.html
+++ b/src/main/resources/templates/Carton/show.html
@@ -37,9 +37,8 @@ margin: 0 auto; /* Опционално: Центриране на карта х
             </a>
         </nav>
         <main class="content">
-            <div class="d-flex justify-content-center">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-lg-8 mx-auto">
                         <div class="card custom-card-width-lg">
                             <div class="card-header">
                                 <h5 class="card-title mb-0">Всички кашони</h5>
@@ -48,7 +47,8 @@ margin: 0 auto; /* Опционално: Центриране на карта х
                                 <a href="/create" class="btn btn-primary">Добави Кашон</a>
                             </div>
                             <div class="card-body">
-                                <table class="table">
+                                <div class="table-responsive">
+                                    <table class="table">
                                     <thead>
                                     <tr>
                                         <th>ID</th>
@@ -84,9 +84,9 @@ margin: 0 auto; /* Опционално: Центриране на карта х
                                 </table>
                             </div>
                         </div>
+                        </div>
                     </div>
                 </div>
-            </div>
         </main>
     </div>
 </div>
