--- a/src/main/resources/templates/Client/show.html
+++ b/src/main/resources/templates/Client/show.html
@@ -20,9 +20,8 @@
       </a>
     </nav>
     <main class="content">
-      <div class="d-flex justify-content-center">
         <div class="row">
-          <div class="col-12">
+          <div class="col-lg-8 mx-auto">
             <div class="card custom-card-width-lg">
               <div class="card-header">
                 <h5 class="card-title mb-0">Всички клиенти</h5>
@@ -31,7 +30,8 @@
                 <a href="/client/create" class="btn btn-primary">Добави Клиент</a>
               </div>
               <div class="card-body">
-                <table class="table">
+                <div class="table-responsive">
+                  <table class="table">
                   <thead>
                   <tr>
                     <th>ID</th>
