--- a/src/main/resources/templates/MaterialOrder/show.html
+++ b/src/main/resources/templates/MaterialOrder/show.html
@@ -18,9 +18,8 @@
             </a>
         </nav>
         <main class="content">
-            <div class="d-flex justify-content-center">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-lg-8 mx-auto">
                         <div class="card custom-card-width-lg">
                             <div class="card-header">
                                 <h5 class="card-title mb-0">Всички поръчки на материали, които НЕ са доставени</h5>
@@ -29,7 +28,8 @@
                                 <a href="/material-order/create" class="btn btn-primary">Поръчай материал</a>
                             </div>
                             <div class="card-body">
-                                <table class="table">
+                                <div class="table-responsive">
+                                    <table class="table">
                                     <thead>
                                     <tr>
                                         <th>Поръчка</th>
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+                </div>
         </main>
     </div>
 </div>
