fix some show htmls to look better on phone

--- a/src/main/resources/templates/MaterialOrder/show.html
+++ b/src/main/resources/templates/MaterialOrder/show.html
@@ -19,7 +19,7 @@
         </nav>
         <main class="content">
                 <div class="row">
-                    <div class="col-lg-8 mx-auto">
+                    <div class="col-lg-9 mx-auto">
                         <div class="card custom-card-width-lg">
                             <div class="card-header">
                                 <h5 class="card-title mb-0">Всички поръчки на материали, които НЕ са доставени</h5>
@@ -63,12 +63,12 @@
                             </div>
                         </div>
                         <br><br>
-                        <div class="card custom-card-width-lg">
                             <div class="card-header">
                                 <h5 class="card-title mb-0">Всички поръчки на материали, които СА са доставени</h5>
                             </div>
                             <div class="card-body">
-                                <table class="table">
+                                <div class="table-responsive">
+                                    <table class="table">
                                     <thead>
                                     <tr>
                                         <th>Поръчка</th>
@@ -109,6 +109,7 @@
                         </div>
                     </div>
                 </div>
+                    </div>
                 </div>
         </main>
     </div>
