--- a/src/main/resources/templates/MaterialOrder/showMaterialForOrderId.html
+++ b/src/main/resources/templates/MaterialOrder/showMaterialForOrderId.html
@@ -20,15 +20,16 @@
             </a>
         </nav>
         <main class="content">
+            <div class="d-flex justify-content-center">
                 <div class="row">
-                    <div class="col-lg-8 mx-auto">
+                    <div class="col-12">
                         <div class="card custom-card-width-lg">
                             <div class="card-header">
                                 <h5 class="card-title mb-0">Всички Нужни брой Материали</h5>
                             </div>
+
                             <div class="card-body">
-                                <div class="table-responsive">
-                                    <table class="table">
+                                <table class="table">
                                     <thead>
                                     <tr>
                                         <th>Материал</th>
