--- a/src/main/resources/templates/MaterialOrder/showMaterialForOrderId.html
+++ b/src/main/resources/templates/MaterialOrder/showMaterialForOrderId.html
@@ -4,7 +4,7 @@
     <!--    LINKS  -->
     <th:block th:include="~{fragments/links}"></th:block>
 
-    <title> Поръчки на материали </title>
+    <title> Всички Нужни брой Материали </title>
     <link href="/css/show.css" rel="stylesheet">
 </head>
 <body>
