--- a/src/main/resources/templates/fragments/links.html
+++ b/src/main/resources/templates/fragments/links.html
@@ -9,6 +9,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="shortcut icon" href="/static/img/icons/icon-48x48.png"/>
 <link rel="canonical" href="https://demo-basic.adminkit.io/"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 
 <link href="/css/app.css" rel="stylesheet">
 <link href="/js/app.css" rel="stylesheet">
